[project]
name = "openpiv-skills"
version = "0.1.0"
description = "OpenPIV Python Skill - Particle Image Velocimetry tools"
readme = "SKILL.md"
requires-python = ">=3.10"
dependencies = [
    "openpiv",
    "numpy",
    "matplotlib",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[project.scripts]
openpiv-process = "scripts.runner:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]